# tylibs

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Kconfig  Makefile  README.md  sdkconfig.esp32  tylibs_component.yml
components/bus/: CMakeLists.txt  Kconfig
components/bus/include/tybus/: tybus.h
components/bus/src/: tybus.cpp
components/bus/src/include/platform/: scheduler.hpp
components/bus/src/platform/esp/: scheduler.cpp
components/bus/src/platform/linux/: scheduler.cpp  threadqueue.h
components/bus/src/platform/zephyr/: scheduler.cpp
components/common/: CMakeLists.txt  Kconfig
components/common/include/ty/: error.h  exit_code.h  instance.h  log.hpp  print.hpp  printable.hpp  ty-core-config.h
components/common/include/ty/common/: code_utils.hpp
components/common/include/ty/config/: misc.h
components/common/src/include/: instance.hpp
components/common/src/logging/: logging.cpp
components/common/src/platform/esp/: ty-esp-config.h
components/common/src/platform/zephyr/: platform-zephyr.h  ty-zephyr-config.h
components/net/: CMakeLists.txt  Kconfig
components/net/include/tynet/: connection.hpp  ip_address.hpp  network_interface.hpp
components/net/include/tynet/mqtt/: mqtt.hpp
components/net/src/: connection.cpp  network_interface.cpp
components/net/src/mqtt/: mqtt.cpp
components/net/src/platform/esp/: mqtt.esp.cpp
components/net/src/platform/linux/: mqtt.linux.cpp  mqtt.posix.cpp
components/settings/: CMakeLists.txt
components/settings/include/tysettings/platform/: settings.h
components/settings/src/platform/esp/: settings.c
components/settings/src/platform/linux/: settings.cpp  settings_file.cpp
components/tyblecom/: CMakeLists.txt  Kconfig
components/tyblecom/include/ty/blecom/: blecom.hpp
components/tyblecom/src/: blecom.cpp
components/tyblecom/src/include/: blecom_p.hpp  blecom_private.hpp
components/tyblecom/src/platform/esp/: blecom.esp.cpp  mqtt.esp.cpp
components/tyblecom/src/platform/linux/: adapter1.hpp  blecom.linux.cpp  client.hpp  device1.hpp  gatt_application1.hpp  gatt_characteristic1.cpp  gatt_characteristic1.hpp  gatt_characteristic_builder.hpp  gatt_descriptor1.cpp  gatt_descriptor1.hpp  gatt_manager1.hpp  gatt_service1.cpp  gatt_service1.hpp  generic_characteristic.hpp  le_advertisement1.hpp  le_advertising_manager1.hpp  mqtt.linux.cpp  object_manager.hpp  properties_ext_adaptor.hpp  read_only_characteristic.hpp  serial_characteristic.hpp  socket.hpp  tyblecom-adaptor-glue.h  tyblecom-proxy-glue.h  util.cpp  util.hpp
components/tyblecom/src/platform/linux/dbus/: adapter.xml  generate.sh  proxy.xml
components/tyblecom/src/platform/zephyr/: CMakeLists.txt  tynet-zephyr-config.h
components/tybus/: CMakeLists.txt  Kconfig
components/tybus/include/ty/bus/: tybus.h
components/tybus/src/: tybus.cpp
components/tybus/src/include/platform/: scheduler.hpp
components/tybus/src/platform/esp/: scheduler.cpp
components/tybus/src/platform/linux/: scheduler.cpp  threadqueue.c
components/tybus/src/platform/zephyr/: scheduler.cpp
components/tycommon/: CMakeLists.txt  Kconfig
components/tycommon/include/: tylibs_version.h
components/tycommon/include/esp/ty/: new.hpp
components/tycommon/include/ty/: instance.h  log.hpp  logging.h  pimpl.hpp  platform.h  print.hpp  printable.hpp  ty-core-config.h  tycommon.h
components/tycommon/include/ty/common/: array.hpp  as_core_type.hpp  binary_search.hpp  debug.hpp  error.hpp  locator.hpp
components/tycommon/src/: pimpl.cpp
components/tycommon/src/include/: string.hpp
components/tycommon/src/instance/: instance.cpp
components/tycommon/src/logging/: log.cpp  logging.cpp
components/tynet/: CMakeLists.txt  Kconfig
components/tynet/src/: connection.cpp  network_interface.cpp
components/tynet/src/mqtt/: mqtt.cpp
components/tysettings/: CMakeLists.txt  Kconfig
components/tysettings/include/ty/settings/platform/: settings.h
components/tysettings/src/platform/esp/: settings.c
components/tysettings/src/platform/linux/: settings.cpp  settings.hpp  settings_file.hpp
components/tysettings/src/platform/zephyr/: CMakeLists.txt  settings.c  tysettings-zephyr-config.h
examples/ble/blecom/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  tyconfig  tyconfig.defaults
examples/ble/blecom/esp/main/: CMakeLists.txt
examples/ble/blecom/linux/main/: main.cpp  (+1 more)
examples/ble/blecom/src/: app.cpp
examples/ble/blecom/zephyr/: CMakeLists.txt
examples/getting_started/hello_world/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  tyconfig  tyconfig.defaults
examples/getting_started/hello_world/esp/: README.md  tyconfig  tyconfig.defaults
examples/getting_started/hello_world/esp/main/: CMakeLists.txt  main.cpp
examples/getting_started/hello_world/linux/: CMakeLists.txt  tyconfig  tyconfig.defaults  tylibs_component.yml
examples/getting_started/hello_world/linux/main/: CMakeLists.txt  main.cpp
examples/getting_started/hello_world/src/: CMakeLists.txt  app.cpp  app.h
examples/getting_started/hello_world/zephyr/: README.md
examples/getting_started/hello_world/zephyr/src/: main.cpp
test-apps/esp/hello_world/: CMakeLists.txt  tyconfig
test-apps/esp/hello_world/main/: main.cpp
test-apps/linux/hello_world/: README.md  tyconfig
test-apps/linux/hello_world/main/: CMakeLists.txt  main.cpp
tools/: python_version_checker.py  tylibs_tools.py
tools/cmake/: build.cmake  component.cmake  depgraph.cmake  extensions.cmake  git_submodules.cmake  kconfig.cmake  ldgen.cmake  project.cmake  project_description.json.in  targets.cmake  toolchain-linux.cmake  ty-build.cmake  ty-component.cmake  ty-depgraph.cmake  ty-kconfig.cmake  ty-prefix_map.cmake  ty-project.cmake  ty-targets.cmake  ty-toolchain-linux.cmake  ty-utilities.cmake  tylibs.cmake  utilities.cmake  version.cmake
tools/cmake/scripts/: component_get_requirements.cmake
tools/kconfig_new/: confgen.py  config.env.in  confserver.py  prepare_kconfig_files.py
tools/platform/: esp.cmake  linux.cmake  zephyr.cmake
zephyr/: module.yml
(+15 files in other folders)
